--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,12 @@
-ray[rllib]==0.8.4
-numpy
-jupyterlab
-jupyter-server-proxy
-ipywidgets
-matplotlib
-holoviz
+pandas
+holoviews
 bokeh
 psutil
-bs4
+jupyterlab
+jupyter-server-proxy
+beautifulsoup4
 lxml
 setproctitle
-atoma
 pytz
+ray[rllib]==0.8.4
+atoma
