--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 pandas
+requests
+tensorflow
 holoviews
 bokeh
 matplotlib
@@ -9,7 +11,9 @@ beautifulsoup4
 lxml
 setproctitle
 pytz
-ray[rllib]==0.8.4
+ray[rllib]=0.8.4
+ray[tune]=0.8.4
+ray[debug]=0.8.4
 atoma
 cffi
 cryptography
