--- a/ray-project/project.yaml
+++ b/ray-project/project.yaml
@@ -15,7 +15,7 @@ environment:
   # e.g. ubuntu:18.04.
   requirements: ray-project/requirements.txt
 
-  shell: # Shell commands to be ran for environment setup.
+  shell: # Shell commands to be run for environment setup.
     - echo "Setting up the environment"
 
 # Pathnames for files and directories that should be saved in a
