--- a/requirements.txt
+++ b/requirements.txt
@@ -14,9 +14,10 @@ beautifulsoup4
 lxml
 setproctitle
 pytz
-ray[rllib]==0.8.5
-ray[tune]==0.8.5
-ray[debug]==0.8.5
+ray[rllib]==0.8.6
+ray[tune]==0.8.6
+ray[debug]==0.8.6
+ray[dashboard]==0.8.6
 atoma
 cffi
 cryptography
