--- a/environment.yml
+++ b/environment.yml
@@ -23,10 +23,7 @@ dependencies:
   - pytz
   - nodejs
   - pip:
-    - ray[rllib]==0.8.6
-    - ray[tune]==0.8.6
-    - ray[debug]==0.8.6
-    - ray[dashboard]==0.8.6
+    - ray[all]==0.8.6
     - atoma
     - box2d-py
     - anyscale
