--- a/ray-project/cluster.yaml
+++ b/ray-project/cluster.yaml
@@ -34,8 +34,8 @@ auth:
 
 # List of shell commands to run to set up nodes.
 setup_commands:
-    - echo '. /home/ubuntu/anaconda3/etc/profile.d/conda.sh' >> ~/.bashrc
-    - echo "conda deactivate; conda activate tensorflow2_p36" >> ~/.bashrc
+    - echo 'export PATH="$HOME/anaconda3/envs/tensorflow_p36/bin:$PATH"' >> ~/.bashrc
+    - pip install -U https://s3-us-west-2.amazonaws.com/ray-wheels/latest/ray-0.9.0.dev0-cp36-cp36m-manylinux1_x86_64.whl
     - conda install -y nodejs
     - /home/ubuntu/anaconda3/bin/pip list | grep jupyter
     - /home/ubuntu/anaconda3/bin/pip install -U jupyterlab
