--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -11,7 +11,7 @@ RUN echo 'conda deactivate; conda activate anyscale-academy' >> /root/.bashrc
 
 #RUN /root/anaconda3/bin/conda update -n base -c defaults conda
 RUN conda install -y nodejs
-RUN /root/anaconda3/bin/conda env create -f /root/academy-$VERSION/environment.yml
+RUN /root/anaconda3/bin/conda env create -f /root/academy-$VERSION/docker/environment-docker.yml
 RUN /root/anaconda3/envs/anyscale-academy/bin/jupyter labextension install "@pyviz/jupyterlab_pyviz"
 RUN /root/anaconda3/envs/anyscale-academy/bin/jupyter labextension update --all
 RUN /root/anaconda3/envs/anyscale-academy/bin/jupyter lab build
