--- a/docker/Dockerfile-academy-all
+++ b/docker/Dockerfile-academy-all
@@ -2,4 +2,5 @@ FROM deanwampler/academy-base:latest
 ARG VERSION
 LABEL maintainer="Anyscale Academy <academy@anyscale.com>"
 
-ADD academy-$VERSION       /root/academy-$VERSION
+ADD academy-all/academy-$VERSION       /root/academy-$VERSION
+RUN ls -al /root/academy-$VERSION
