--- a/docker/Dockerfile-academy-base
+++ b/docker/Dockerfile-academy-base
@@ -12,9 +12,13 @@ RUN ls -al /root/academy-base
 RUN echo 'conda deactivate; conda activate anyscale-academy' >> /root/.bashrc
 
 #RUN /root/anaconda3/bin/conda update -n base -c defaults conda
+# Install in the base conda installation.
 RUN conda install -y nodejs
+RUN conda install -y ipywidgets
+
+# Create the academy environment:
 RUN /root/anaconda3/bin/conda env create -f /root/academy-base/environment-docker.yml
-RUN /root/anaconda3/envs/anyscale-academy/bin/jupyter labextension install "@pyviz/jupyterlab_pyviz"
-RUN /root/anaconda3/envs/anyscale-academy/bin/jupyter labextension update --all
-RUN /root/anaconda3/envs/anyscale-academy/bin/jupyter lab build
+RUN /root/anaconda3/bin/jupyter labextension install "@pyviz/jupyterlab_pyviz"
+RUN /root/anaconda3/bin/jupyter labextension update --all
+RUN /root/anaconda3/bin/jupyter lab build
 RUN /root/anaconda3/bin/conda clean --all
