--- a/environment.yml
+++ b/environment.yml
@@ -9,7 +9,7 @@ dependencies:
   - numpy >= 1.18.5
   - pandas
   - requests
-  - pytorch
+  - torch
   - torchvision
   - tqdm >= 4.37.0
   - keras
@@ -22,12 +22,10 @@ dependencies:
   - jupyter-server-proxy
   - beautifulsoup4
   - lxml
-  - setproctitle
   - pytz
   - nodejs
   - pip:
     - ray[all]==0.8.7
-    - paretoset >= 1.1.2
     - tensorboard >= 2.3.0
     - tensorflow >= 2.3.0
     - atoma
