--- a/environment.yml
+++ b/environment.yml
@@ -25,9 +25,9 @@ dependencies:
   - pytz
   - nodejs
   - pip:
-    - ray[all]==0.8.7
-    - tensorboard >= 2.3.0
-    - tensorflow >= 2.3.0
+    - ray[all] >= 1.2
+    - tensorboard >= 2.3
+    - tensorflow >= 2.3
     - atoma
     - box2d-py
 
