Update serve cloud run deploy

--- a/ray-serve/e2e/deploy/Dockerfile
+++ b/ray-serve/e2e/deploy/Dockerfile
@@ -1,4 +1,4 @@
-FROM rayproject/ray:1.9.0
+FROM rayproject/ray:1.10.0
 EXPOSE 8000
 
 # pip dependencies
@@ -7,4 +7,4 @@ RUN pip install -r requirements.txt --no-cache-dir
 
 # runtime
 COPY . .
-CMD bash -c "ray start --head --node-ip-address 0.0.0.0; python deploy.py; cat /tmp/ray/session_latest/logs/*"
+CMD bash -c "python deploy.py"
