--- a/ray-rllib/acm_recsys_tutorial_2022/requirements.txt
+++ b/ray-rllib/acm_recsys_tutorial_2022/requirements.txt
@@ -1,4 +1,5 @@
 tensorflow==2.8
+torch
 ray  # Note for Anyscale users: install ray from latest nightly wheel
 dm-tree
 gym==0.21
@@ -10,3 +11,4 @@ tensorflow_probability
 #recsim --no-deps
 gin-config
 #git+https://github.com/google/dopamine --no-deps
+seaborn
