--- a/ray-rllib/acm_recsys_tutorial_2022/requirements.txt
+++ b/ray-rllib/acm_recsys_tutorial_2022/requirements.txt
@@ -1,5 +1,6 @@
 tensorflow==2.8
 torch==1.12.1
+pyarrow==6.0.1
 ray  # Note for Anyscale users: install ray from latest nightly wheel
 dm-tree
 gym==0.21
